resources/dashy-service/base/dashy-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: core
  name: dasy-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashy-service
  template:
    metadata:
      labels:
        app: dashy-service
    spec:
      securityContext:
        runAsUser: 0 # Specifies that the pod should run as root
      containers:
      - name: dashy-service
        image: lissy93/dashy:latest
        ports:
        - containerPort: 80
