resources/dashy-service/base/dashy-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashy-service
  namespace: core
  labels:
    app: dashy-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30833
  selector:
    app: dashy-service
